src/components/announcement-bar/styles.module.css
.announcement {
  background-color: #FEF284;
  min-height: 60px;
  font-size: 16px;
  line-height: 150%;
  text-align: center;
  padding: 16px;
}

.announcement img {
  vertical-align: middle;
  margin: 0 18px;
}

.announcement a {
  color: black;
  text-decoration: underline;
}
.announcement a:hover {
  text-decoration: none;
  color: #a09536;
}
@media screen and (max-width: 768px) {
  .announcement span.announcementStar {
    display: block;
    margin-bottom: 10px;
  }
  .announcement span.announcementStarEnd {
    display: none;
  }
}

